--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
     <title>puma</title>
-    <link rel="stylesheet" href="/puma.css"> 
+    <link rel="stylesheet" href="./index.css"> 
 </head>
 <body>
     <div class="promo">EXTRA 50% OFF AND FREE SHIPPING ON ALL ONLINE PAYMENTS*</div>
@@ -58,10 +58,10 @@
         <P>SHOP THE LATEST & GREATEST</P>
       </div>
       <div class="e">
-        <img src="/man.png" alt="man">
-        <img src="/sport.png" alt="sportman">
-        <img src="/women.png" alt="trendy">
-        <img src="/sport2.png" alt="">
+        <img src="./man.png" alt="man">
+        <img src="./sport.png" alt="sportman">
+        <img src="./women.png" alt="trendy">
+        <img src="./sport2.png" alt="">
       </div>
         <div class="set">
         <img src="/blue.jpg" alt="puma">
@@ -75,7 +75,7 @@
         <button>FOR WOMEN</button>
      </div> 
       <div class="good">
-        <img src="/good.jpg" alt="puma">
+        <img src="./good.jpg" alt="puma">
       </div>
       <div class="z">
         <h1>ORIGIN STORY</h1>
@@ -85,7 +85,7 @@
         <button>SHOP NOW</button>
       </div> 
       <div class="co">
-        <img src="/couple.jpg" alt="puma">
+        <img src="./couple.jpg" alt="puma">
       </div>
       <div class="t">
         <h1>PUMA x SQUID GAME</h1>
@@ -99,13 +99,13 @@
         <P>THE NEW DROP SHINES BRIGHT</P>
       </div>
       <div class="i">
-        <img src="/puma/puma1.png" alt="man">
+        <img src="./puma/puma1.png" alt="man">
      </div>
      <div class="p">
         <h2>STEP INTO THE SPOTLIGHT</h2>
       </div>
       <div class="w">
-        <img src="/sport1.png" alt="man">
+        <img src="./sport1.png" alt="man">
      </div>
       <div class="cm">
         <img src="last.png" alt="puma">
